Made the search results list view clickable, and added a new activity to display the card image, which i will implement later

--- a/app/src/main/res/layout/activity_search_results.xml
+++ b/app/src/main/res/layout/activity_search_results.xml
@@ -19,9 +19,8 @@
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
         android:text="Something"
-        android:textIsSelectable="true"/>
-
-
+        android:textIsSelectable="true"
+        android:clickable="true"/>
 
 
     <Button
