--- a/app/src/main/res/layout/activity_view_cards.xml
+++ b/app/src/main/res/layout/activity_view_cards.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.mobilecomputing.sbarth.mtgcardscanner.SearchResults"
     android:orientation="vertical"
-    android:weightSum="10"
     android:padding="16dp"
 
     >
@@ -16,18 +12,17 @@
         android:layout_weight="10"
         android:layout_width="match_parent"
         android:layout_height="fill_parent"
-        android:layout-margin="16dp"
         android:text="Something"
         android:textIsSelectable="true"
-        android:clickable="true"/>
-
+        android:clickable="true"
+        />
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id = "@+id/btnReturnMain"
         android:layout_weight="1"
-        android:layout-margin="16dp"
+        android:layout_margin="16dp"
         android:background="@android:color/holo_red_dark"
         android:textColor="@android:color/white"
         android:textSize="14pt"
